recursion.lessons.recursion.tree.Tree.scala.error
Tree:11: error: reassignment to val
		length = length * shrink;
                       ^